# data-analysis

./: 404.html  README.md  index.html  mkdocs.yml  outline.md  pyproject.toml  sitemap.xml
activities/challenges/: index.html
activities/m4-analysis/: index.html
activities/milestone-1/: index.html
activities/milestone-2/: index.html
activities/milestone-3/: index.html
activities/milestone-4/: index.html
activities/milestone-5/: index.html
activities/participation/: index.html
activities/project/: index.html
activities/reading-note/: index.html
course/docs/: index.md
css/: custom.css
docs/: index.md  readings.md  schedule.md  syllabus.md
docs/activities/: challenges.md  m4-analysis.md  milestone-1.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  participation.md  project.md  reading-note.md
docs/images/: ds-pipeline.drawio
docs/materials/: da-milestone3-group0.typ  lab-modeling.ipynb
docs/modules/: analysis.md  catch-up.md  causality.md  communication.md  data.md  explanation.md  exploration-1.md  (+23 more)
images/: funnel-causality.drawio  variables-iv-dv.drawio
materials/: assignment-1.ipynb  assignment-2.ipynb  assignment-3.ipynb  assignment-starter.ipynb  da-m3-notebook.ipynb  da-milestone3-group0.typ  data-report.ipynb  paper.ipynb  playground-1.ipynb  playground-1.py  playground-2.ipynb  playground-polarization.py  reading-note.ipynb  research-design.ipynb
readings/: index.html
schedule/: index.html
schedule_with_links/: index.html
search/: search_index.json
syllabus/: index.html  syllabus-data-analysis.tex
(+57 files in other folders)
