[tool.poetry]
name = "data-analysis"
version = "0.1.0"
description = ""
authors = ["Mickael Temporão <16172142+mickaeltemporao@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.1"
mkdocs = "^1.6.1"
mkdocs-macros-plugin = "^1.0.5"
mkdocs-material-extensions = "^1.3.1"
pymdown-extensions = "^10.9"
mkdocs-material = "^9.5.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
