[project]
name = "data-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.5.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.20",
    "mkdocs-material-extensions>=1.3.1",
    "pymdown-extensions>=10.16.1",
]
